tests/models/snapshots/can_create_with_password@users.snap
---
source: tests/models/users.rs
expression: res
---
Ok(
    Model {
        api_key: "lo-PID",
        created_at: DATE,
        email: "test@framework.com",
        email_verification_sent_at: None,
        email_verification_token: None,
        email_verified_at: None,
        id: ID
        magic_link_expiration: None,
        magic_link_token: None,
        name: "framework",
        password: "PASSWORD",
        pid: PID,
        reset_sent_at: None,
        reset_token: None,
        updated_at: DATE,
    },
)
