tests/models/snapshots/can_find_by_email@users.snap
---
source: tests/models/users.rs
expression: existing_user
---
Ok(
    Model {
        api_key: "lo-95ec80d7-cb60-4b70-9b4b-9ef74cb88758",
        created_at: 2023-11-12T12:34:56.789+00:00,
        email: "user1@example.com",
        email_verification_sent_at: None,
        email_verification_token: None,
        email_verified_at: None,
        id: 1,
        magic_link_expiration: None,
        magic_link_token: None,
        name: "user1",
        password: "$argon2id$v=19$m=19456,t=2,p=1$ETQBx4rTgNAZhSaeYZKOZg$eYTdH26CRT6nUJtacLDEboP0li6xUwUF/q5nSlQ8uuc",
        pid: 11111111-1111-1111-1111-111111111111,
        reset_sent_at: None,
        reset_token: None,
        updated_at: 2023-11-12T12:34:56.789+00:00,
    },
)
